Add upstream website to README

--- a/README
+++ b/README
@@ -75,3 +75,5 @@ GMP.
 The current version was put together by Niels Möller
 <nisse@lysator.liu.se>, with a fair amount of copy-and-paste from the
 GMP sources.
+
+Website: https://gmplib.org/
